deployments/orc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orc
  namespace: azeroth
  labels:
    app.kubernetes.io/name: orc
spec:
  replicas: 1
  selector:
    matchLabels:
      class: orc
  template:
    metadata:
      labels:
        class: orc
        app.kubernetes.io/name: orc
    spec:
      containers:
        - image: ghcr.io/vmaleze/cilium-hands-on/unit:1.0.0
          name: unit
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: orc
  namespace: azeroth
  labels:
    app.kubernetes.io/name: orc
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    class: orc
  type: ClusterIP
